Php ORM Mapping example

--- a/index.html
+++ b/index.html
@@ -1,41 +1,40 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en-US">
 <head>
-<link rel="stylesheet" type="text/css" href="style.css">
-<title>Sell It </title>
-<style>
-
-</style>
+    <meta charset="UTF-8">
+    <title>Simple Id Query #2</title>
 </head>
 
-<body align="center">
-	<p><center><img src="sell_it_postit.jpg"/></center></p>
-        <marquee> Covers most of California including San Francisco, San Jose, Los Angeles and many more...  </marquee>
-	<form action="queryCityDb.php"
-		  method= "post">
-		<p><I> Customized Ads based on your location!! Try it out ...</I></p><br>
-		<fieldset align="center">
-		    <legend ><h3>Select your city</h3></legend>
+<body>
+    <form action="prototype.php"
+          method="get">
+        <fieldset>
+            <legend>User id?</legend>
+            <p>
+                <label>User's id:</label>
+                <input name="user_id" type="text" />
+            </p>
+            
+            <p>
+                <input type="submit" value="Submit" />
+            </p>
+        </fieldset>
+    </form>
 
-			<br>
-			<select name="city">
-			<option value="">select</option>
-			<option value="San Jose">San Jose</option>
-			<option value="San Francisco">San Francisco</option>
-			<option value="Los Gatos">Los Gatos</option>
-			<option value="Fremont">Fremont</option>
-                        <option value="LA">Los Angeles</option>
+    <form action="prototype.php"
+          method="get">
+        <fieldset>
+            <legend>Artist id?</legend>
+            <p>
+                <label>Artist's id:</label>
+                <input name="artist_id" type="text" />
+            </p>
+            
+            <p>
+                <input type="submit" value="Submit" />
+            </p>
+        </fieldset>
+    </form>
 
-			</select>
-			<input type="submit" value="Search" ></input>
-			<br>
-			</br>
-			<br>
-			</br>
-			<a href="postAd.html">Post Ad for your stuff  </a><p>  </p>
-			<a href="queryFullDb.php"> Fetch all Ads</a>
-		</fieldset>
-	</form>
 </body>
 </html>
